@@ -1,5 +1,6 @@
 \name{Xtab}
 \alias{Xtab}
+\alias{sparseMatrixList-class}
 \title{
 Sparse Cross Tabulation
 }
@@ -18,7 +19,7 @@ a \code{\link{formula}} object with the cross-classifying variables (separated b
 an optional matrix or data frame (or similar: see \code{\link{model.frame}}) containing the variables in the formula formula. By default the variables are taken from environment(formula).
 }
   \item{rdrop, cdrop}{
-%%     ~~Describe \code{taxa} here~~
+logical (should zero marginal rows/columns be removed after cross tabulation), character or nmeric (what rows/columns should be removed).
 }
   \item{subset}{
 an optional vector specifying a subset of observations to be used.
@@ -34,12 +35,14 @@ a logical indicating whether to drop unused levels in the classifying factors. I
 }
 }
 \details{
-The function creates two-way cross tabulation. Only works for two factors (since there are no higher-order sparse array classes yet). 
+The function creates two- or three-way cross tabulation. Only works for two or three factors. 
 
 If a left hand side is given in formula, its entries are simply summed over the cells corresponding to the right hand side; this also works if the lhs does not give counts. 
 }
 \value{
 A sparse numeric matrix inheriting from \code{\link{sparseMatrix}}, specifically an object of S4 class \code{dgCMatrix}. 
+
+For three factors, a list of sparse matrices (S4 class \code{sparseMatrixList}).
 }
 \author{
 This function is a slight modification of the \code{\link[Matrix]{xtabs}} function in the \pkg{Matrix} package.
@@ -67,5 +70,15 @@ x
 Xtab(count ~ sample + species, x, cdrop=TRUE,rdrop=FALSE)
 ## drop specific columns by placeholder
 Xtab(count ~ sample + species, x, cdrop="zero.pseudo")
+
+## 2 and 3 way crosstabs
+xx <- data.frame(
+    sample = paste("Sample", c(1,1,2,2,3,4), sep="."),
+    species = c(paste("Species", c(1,1,1,2,3), sep="."),  "zero.pseudo"),
+    count = c(1,2,10,3,4,0),
+    segment = letters[c(6,13,6,13,6,6)])
+xx
+Xtab(count ~ sample + species, xx)
+Xtab(count ~ sample + species + segment, xx)
 }
 \keyword{ manip }
