@@ -2,6 +2,9 @@ MEFA4 VERSIONS
 
 Version 0.1-2 -- January 26, 2011
     * nonDuplicated function added.
+    * segmented Xtab output implemnted
+      needs testing and new class virtual
+      spaseMatrixList.
 
 Version 0.1-1 -- January 25, 2011
     * S4 classes working properly.
